# fzf-folder

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TC-clang.cmake  pixi.toml
src/: CMakeLists.txt  main.cpp
src/finder/: CMakeLists.txt  finder.cpp
src/parser/: CMakeLists.txt  commands.h  parser.cpp
src/tui/: CMakeLists.txt  tui.cpp
test/: a.out  main.cpp
tests/: CMakeLists.txt
tests/parser/: CMakeLists.txt  test_parser.cpp
tests/stubs/: CMakeLists.txt
tests/stubs/tui/: CMakeLists.txt  stub_tui.cpp
